showing the messages list with ngFor

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,6 @@
+<div *ngFor="let message of messages">
+    {{message}}
+</div>
+
 <input [(ngModel)]="message" (keyup)="$event.keyCode == 13 && sendMessage()" />
 <button (click)="sendMessage()">Send</button>
